--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ documentclass: book
 cover-image: "images/koos10.png"
 ---
 
-# r for data science workshop {-}
+# R for data science workshop {-}
 
 This website us the ggplot visulization sections of Hadley Wickham's book [2nd edition of "R for Data Science"](https://r4ds.hadley.nz/).
 
