--- a/lessons/01-communication.Rmd
+++ b/lessons/01-communication.Rmd
@@ -104,7 +104,7 @@ ggplot(df, aes(x, y)) +
 
 ### Exercises 1.2.1 {.unnumbered}
 
-1.  Create a boxplot on the fuel economy data with x = `hwy` and y = `class` customized `title`, `subtitle`, `caption`, `x`, `y`, and `color` labels.
+1.  Create a boxplot using the fuel economy data with x = `hwy` and y = `class` customized `title`, `subtitle`, `caption`, `x`, `y`, and `color` labels.
 
 Ans 1.3.1.1:
 ```{r Ans 1.3.1.1}
