--- a/lessons/02-layers.Rmd
+++ b/lessons/02-layers.Rmd
@@ -441,16 +441,8 @@ p <- ggplot(df, aes(x, y, label = label))
 
 ```{r}
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 #| fig-show: hide
 
->>>>>>> 3726d27 (Delete 01-vizualization.Rmd)
-=======
-#| fig-show: hide
-
->>>>>>> c442718 (ggiaever)
 ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_smooth(aes(color = drv), show.legend = FALSE)
 ```
@@ -471,13 +463,10 @@ Try it.
 
 Ans: 2.3.1.3:
 
+
 4.  Recreate the R code necessary to generate and save the following graph (\@ref(fig:fig-6-plots)), and arrange them in a figure with 2 columns. Note that wherever a categorical variable is used in the plot, it's `drv`. Use the mathematical notation in one, and the function from `patchwork`, `plot_layout` in another for laying out the plot.
 
-<<<<<<< HEAD
-```{r}
-=======
 ```{r fig-6-plots}
->>>>>>> c442718 (ggiaever)
 #| label: fig-6-plots
 #| echo: false
 #| out-width: "100%"
@@ -497,49 +486,14 @@ Ans: 2.3.1.3:
 #|   finally in the **sixth** plot points are represented in different colors 
 #|   for each level of drive train and they have a thick white border.
 
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point() +
-  geom_smooth(se = FALSE)
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_smooth(aes(group = drv), se = FALSE) +
-  geom_point()
-ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
-  geom_point() +
-  geom_smooth(se = FALSE)
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point(aes(color = drv)) +
-  geom_smooth(se = FALSE)
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point(aes(color = drv)) +
-  geom_smooth(aes(linetype = drv), se = FALSE)
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point(size = 4, color = "white") +
-  geom_point(aes(color = drv))
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
->>>>>>> c442718 (ggiaever)
-
 
 knitr::include_graphics("images/6-plots.png")
-
-<<<<<<< HEAD
->>>>>>> 3726d27 (Delete 01-vizualization.Rmd)
-=======
->>>>>>> c442718 (ggiaever)
 ```
-
-<div class = "fold s o"
-
-The code for each of the plots is given below.
 
 
 ```{r, Ans: 2.3.1.4}
 
 ```
-
-
 
 ## Facets 
 
@@ -557,7 +511,8 @@ Here "formula" is the name of the thing created by `~`, not a synonym for "equat
 #|   faceted by class, with facets spanning two rows.
 
 ggplot(mpg, aes(x = displ, y = hwy)) + 
-  geom_point() + facet_wrap(~cyl)
+  geom_point() + 
+  facet_wrap(~cyl)
 ```
 
 To facet your plot with the combination of two variables, switch from `facet_wrap()` to `facet_grid()`.
@@ -571,8 +526,8 @@ The first argument of `facet_grid()` is also a formula, but now it's a double si
 #|   no observations: 5 cylinders and 4 wheel drive, 4 or 5 cylinders and front 
 #|   wheel drive.
 
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point() +
+ggplot(mpg, aes(x = displ, y = hwy)) + 
+  geom_point() + 
   facet_grid(drv ~ cyl)
 ```
 
@@ -591,17 +546,14 @@ Setting the `scales` argument in a faceting function to `"free"` will allow for 
 #|   cylinders and front wheel drive. Facets within a row share the same 
 #|   y-scale and facets within a column share the same x-scale.
 
-
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point() +
+ggplot(mpg, aes(x = displ, y = hwy)) + 
+  geom_point() + 
   facet_grid(drv ~ cyl, scales = "free_y")
 ```
-
 
 Modifying facet label appearance:
 
 ```{r}
-
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_point() +
@@ -625,7 +577,6 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
     )
   )
 ```
-
 
 
 ### 2.4.1 Exercises {.unnumbered}
@@ -711,7 +662,6 @@ Ans: 2.4.1.5:
 
 #| fig-show: hide
 
-<<<<<<< HEAD
 ggplot(mpg, aes(x = displ)) +
   geom_histogram() +
   facet_grid(drv ~ .)
@@ -719,21 +669,7 @@ ggplot(mpg, aes(x = displ)) +
 ggplot(mpg, aes(x = displ)) +
   geom_histogram() +
   facet_grid(. ~ drv)
-<<<<<<< HEAD
-=======
-#| fig-show: hide
 
-ggplot(mpg, aes(x = displ)) +
-  geom_histogram() +
-  facet_grid(drv ~ .)
-
-ggplot(mpg, aes(x = displ)) +
-  geom_histogram() +
-
->>>>>>> 3726d27 (Delete 01-vizualization.Rmd)
-=======
-
->>>>>>> c442718 (ggiaever)
 ```
 
 
@@ -1059,16 +995,8 @@ To learn more about a position adjustment, look up the help page associated with
 
 ```{r}
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 #| fig-show: hide
 
->>>>>>> 3726d27 (Delete 01-vizualization.Rmd)
-=======
-#| fig-show: hide
-
->>>>>>> c442718 (ggiaever)
 ggplot(mpg, aes(x = cty, y = hwy)) + geom_point()
 ```
 
@@ -1078,22 +1006,6 @@ Ans: 2.6.1.1:
 
 
 ```{r}
-<<<<<<< HEAD
-<<<<<<< HEAD
-(ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point()) + (ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point(position = "identity"))        
-=======
-
-#| fig-show: hide
-
-ggplot(mpg, aes(x = displ, y = hwy) +
-  geom_point())
-
-ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point(position = "identity")      
->>>>>>> 3726d27 (Delete 01-vizualization.Rmd)
-=======
 
 #| fig-show: hide
 
@@ -1102,7 +1014,6 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_point(position = "identity")      
->>>>>>> c442718 (ggiaever)
 ```
 
 Ans: 2.6.1.2:
